# AEMET-OpenData

./: .gitignore  DESCRIPTION.md  Manifest.in  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
aemet_opendata/: __init__.py  const.py  exceptions.py  forecast.py  helpers.py  interface.py  radar.py  station.py  town.py
examples/: _common.py  _secrets.py  basic.py  get-lightnings-map.py  get-radar-map.py  get-town-by-coords-precise.py  get-town-by-coords.py  get-town-by-id.py  get-town-forecast-daily.py  get-town-forecast-hourly.py
